--- a/zucchini-examples/pom.xml
+++ b/zucchini-examples/pom.xml
@@ -23,13 +23,13 @@
 	<parent>
 		<artifactId>zucchini-parent</artifactId>
 		<groupId>de.codecentric.zucchini</groupId>
-		<version>1.0.0</version>
+		<version>1.1.0</version>
 		<relativePath>../zucchini-parent</relativePath>
 	</parent>
 
 	<groupId>de.codecentric.zucchini</groupId>
 	<artifactId>zucchini-examples</artifactId>
-	<version>1.0.0</version>
+	<version>1.1.0</version>
 	<packaging>jar</packaging>
 
 	<name>Zucchini Examples</name>
@@ -59,11 +59,23 @@
 		</developer>
 	</developers>
 
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>de.codecentric.zucchini</groupId>
 			<artifactId>zucchini-web</artifactId>
-			<version>1.0.0</version>
+			<version>1.1.0</version>
 		</dependency>
 
 		<dependency>
