--- a/zucchini-parent/pom.xml
+++ b/zucchini-parent/pom.xml
@@ -28,7 +28,7 @@
 
 	<groupId>de.codecentric.zucchini</groupId>
 	<artifactId>zucchini-parent</artifactId>
-	<version>1.0.0</version>
+	<version>1.1.0</version>
 	<packaging>pom</packaging>
 
 	<name>Zucchini Parent</name>
@@ -57,6 +57,21 @@
 			<organization>codecentric AG</organization>
 		</developer>
 	</developers>
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+					<configuration>
+						<source>1.6</source>
+						<target>1.6</target>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 
 	<dependencyManagement>
 		<dependencies>
@@ -96,6 +111,5 @@
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
 
 </project>
