--- a/zucchini-examples/pom.xml
+++ b/zucchini-examples/pom.xml
@@ -23,14 +23,14 @@
 	<parent>
 		<artifactId>zucchini-parent</artifactId>
 		<groupId>de.codecentric.zucchini</groupId>
-		<version>1.1.2</version>
-		<relativePath>../zucchini-parent</relativePath>
+		<version>1.1.3</version>
+		<relativePath>../zucchini-parent/pom.xml</relativePath>
 	</parent>
 
 	<groupId>de.codecentric.zucchini</groupId>
 	<artifactId>zucchini-examples</artifactId>
-	<version>1.1.2</version>
-	<packaging>jar</packaging>
+	<version>1.1.3</version>
+	<packaging>pom</packaging>
 
 	<name>Zucchini Examples</name>
 	<description>Web testing examples.</description>
@@ -75,7 +75,10 @@
 		<dependency>
 			<groupId>de.codecentric.zucchini</groupId>
 			<artifactId>zucchini-web</artifactId>
-			<version>1.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>de.codecentric.zucchini</groupId>
+			<artifactId>zucchini-web-junit</artifactId>
 		</dependency>
 
 		<dependency>
