--- a/zucchini-web-junit/pom.xml
+++ b/zucchini-web-junit/pom.xml
@@ -28,12 +28,12 @@
 	</parent>
 
 	<groupId>de.codecentric.zucchini</groupId>
-	<artifactId>zucchini-bdd</artifactId>
+	<artifactId>zucchini-web-junit</artifactId>
 	<version>1.1.3</version>
 	<packaging>jar</packaging>
 
-	<name>Zucchini Examples</name>
-	<description>Testing tools using BDD.</description>
+	<name>Zucchini Web</name>
+	<description>Web testing tools.</description>
 	<url>https://github.com/codecentric/zucchini</url>
 	<licenses>
 		<license>
@@ -61,23 +61,17 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
+			<groupId>de.codecentric.zucchini</groupId>
+			<artifactId>zucchini-bdd</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>de.codecentric.zucchini</groupId>
+			<artifactId>zucchini-web</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
