--- a/zucchini-web/pom.xml
+++ b/zucchini-web/pom.xml
@@ -23,13 +23,13 @@
 	<parent>
 		<groupId>de.codecentric.zucchini</groupId>
 		<artifactId>zucchini-parent</artifactId>
-		<version>1.1.2</version>
-		<relativePath>../zucchini-parent</relativePath>
+		<version>1.1.3</version>
+		<relativePath>../zucchini-parent/pom.xml</relativePath>
 	</parent>
 
 	<groupId>de.codecentric.zucchini</groupId>
 	<artifactId>zucchini-web</artifactId>
-	<version>1.1.2</version>
+	<version>1.1.3</version>
 	<packaging>jar</packaging>
 
 	<name>Zucchini Web</name>
@@ -63,7 +63,7 @@
 		<dependency>
 			<groupId>de.codecentric.zucchini</groupId>
 			<artifactId>zucchini-bdd</artifactId>
-			<version>1.1.2</version>
+			<version>1.1.3</version>
 		</dependency>
 
 		<dependency>
