--- a/zucchini-web-junit/pom.xml
+++ b/zucchini-web-junit/pom.xml
@@ -32,8 +32,8 @@
 	<version>1.1.3</version>
 	<packaging>jar</packaging>
 
-	<name>Zucchini Web</name>
-	<description>Web testing tools.</description>
+	<name>Zucchini Web JUnit</name>
+	<description>Web testing tools integration for JUnit.</description>
 	<url>https://github.com/codecentric/zucchini</url>
 	<licenses>
 		<license>
