--- a/zucchini-bdd/pom.xml
+++ b/zucchini-bdd/pom.xml
@@ -23,12 +23,12 @@
 	<parent>
 		<groupId>de.codecentric.zucchini</groupId>
 		<artifactId>zucchini-parent</artifactId>
-		<version>1.2.1</version>
+		<version>2.0.0-SNAPSHOT</version>
 		<relativePath>../zucchini-parent/pom.xml</relativePath>
 	</parent>
 
 	<artifactId>zucchini-bdd</artifactId>
-	<version>1.2.1</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Zucchini Examples</name>
