--- a/zucchini-web-junit/pom.xml
+++ b/zucchini-web-junit/pom.xml
@@ -23,13 +23,13 @@
 	<parent>
 		<groupId>de.codecentric.zucchini</groupId>
 		<artifactId>zucchini-parent</artifactId>
-		<version>1.2.1</version>
+		<version>2.0.0-SNAPSHOT</version>
 		<relativePath>../zucchini-parent/pom.xml</relativePath>
 	</parent>
 
 	<groupId>de.codecentric.zucchini</groupId>
 	<artifactId>zucchini-web-junit</artifactId>
-	<version>1.2.1</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Zucchini Web JUnit</name>
