--- a/zucchini-examples/pom.xml
+++ b/zucchini-examples/pom.xml
@@ -23,13 +23,13 @@
 	<parent>
 		<artifactId>zucchini-parent</artifactId>
 		<groupId>de.codecentric.zucchini</groupId>
-		<version>2.0.1</version>
+		<version>2.1.0-SNAPSHOT</version>
 		<relativePath>../zucchini-parent/pom.xml</relativePath>
 	</parent>
 
 	<groupId>de.codecentric.zucchini</groupId>
 	<artifactId>zucchini-examples</artifactId>
-	<version>2.0.1</version>
+	<version>2.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Zucchini Examples</name>
