--- a/zucchini-parent/pom.xml
+++ b/zucchini-parent/pom.xml
@@ -28,7 +28,7 @@
 
 	<groupId>de.codecentric.zucchini</groupId>
 	<artifactId>zucchini-parent</artifactId>
-	<version>2.1.0-SNAPSHOT</version>
+	<version>2.1.0</version>
 	<packaging>pom</packaging>
 
 	<name>Zucchini Parent</name>
